# finance-calcs

./: .buildinfo  .copier-answers.yaml  .gitignore  Cargo.toml  Makefile  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/finance_calcs/: index.doctree
.doctrees/autoapi/finance_calcs/_namespace/: index.doctree
.doctrees/autoapi/finance_calcs/_periods/: index.doctree
.doctrees/autoapi/finance_calcs/alpha/: index.doctree
.doctrees/autoapi/finance_calcs/factor/: index.doctree
.doctrees/autoapi/finance_calcs/momentum/: index.doctree
.doctrees/autoapi/finance_calcs/overlap/: index.doctree
.doctrees/autoapi/finance_calcs/portfolio/: index.doctree
.doctrees/autoapi/finance_calcs/post_trade/: index.doctree
.doctrees/autoapi/finance_calcs/quantile/: index.doctree
.doctrees/autoapi/finance_calcs/returns/: index.doctree
.doctrees/autoapi/finance_calcs/risk/: index.doctree
.doctrees/autoapi/finance_calcs/stats/: index.doctree
.doctrees/autoapi/finance_calcs/tail/: index.doctree
.doctrees/autoapi/finance_calcs/volatility/: index.doctree
.doctrees/autoapi/finance_calcs/volume/: index.doctree
.doctrees/autoapi/test_all/: index.doctree
.doctrees/autoapi/test_alpha/: index.doctree
.doctrees/autoapi/test_factor/: index.doctree
.doctrees/autoapi/test_indicators/: index.doctree
.doctrees/autoapi/test_portfolio/: index.doctree
.doctrees/autoapi/test_post_trade/: index.doctree
.doctrees/autoapi/test_returns_risk/: index.doctree
.doctrees/autoapi/test_stats/: index.doctree
.doctrees/autoapi/test_tail/: index.doctree
.doctrees/docs/src/: API.doctree  EXAMPLES.doctree
.doctrees/numpy-2.4.6.dist-info/licenses/numpy/fft/pocketfft/: LICENSE.doctree
.doctrees/numpy-2.4.6.dist-info/licenses/numpy/random/: LICENSE.doctree
.doctrees/numpy/ma/: README.doctree
.doctrees/numpy/random/: LICENSE.doctree
.doctrees/pyarrow/tests/data/orc/: README.doctree
.github/workflows/: build.yaml
_modules/: index.html
_modules/finance_calcs/: _namespace.html  _periods.html  alpha.html  factor.html  momentum.html  overlap.html  portfolio.html  post_trade.html  quantile.html  returns.html  risk.html  stats.html  tail.html  volatility.html  volume.html
_sources/: README.md.txt  index.md.txt
_sources/.github/ISSUE_TEMPLATE/: bug_report.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/finance_calcs/: index.rst.txt
_sources/autoapi/finance_calcs/_namespace/: index.rst.txt
_sources/autoapi/finance_calcs/_periods/: index.rst.txt
_sources/autoapi/finance_calcs/alpha/: index.rst.txt
_sources/autoapi/finance_calcs/factor/: index.rst.txt
_sources/autoapi/finance_calcs/momentum/: index.rst.txt
_sources/autoapi/finance_calcs/overlap/: index.rst.txt
_sources/autoapi/finance_calcs/portfolio/: index.rst.txt
_sources/autoapi/finance_calcs/post_trade/: index.rst.txt
_sources/autoapi/finance_calcs/quantile/: index.rst.txt
_sources/autoapi/finance_calcs/returns/: index.rst.txt
_sources/autoapi/finance_calcs/risk/: index.rst.txt
_sources/autoapi/finance_calcs/stats/: index.rst.txt
_sources/autoapi/finance_calcs/tail/: index.rst.txt
_sources/autoapi/finance_calcs/volatility/: index.rst.txt
_sources/autoapi/finance_calcs/volume/: index.rst.txt
_sources/autoapi/test_alpha/: index.rst.txt
_sources/autoapi/test_factor/: index.rst.txt
_sources/autoapi/test_indicators/: index.rst.txt
_sources/autoapi/test_portfolio/: index.rst.txt
_sources/autoapi/test_post_trade/: index.rst.txt
_sources/autoapi/test_returns_risk/: index.rst.txt
_sources/autoapi/test_stats/: index.rst.txt
_sources/autoapi/test_tail/: index.rst.txt
_sources/docs/src/: API.md.txt  EXAMPLES.md.txt
autoapi/: index.html
autoapi/finance_calcs/: index.html
autoapi/finance_calcs/_namespace/: index.html
autoapi/finance_calcs/_periods/: index.html
autoapi/finance_calcs/alpha/: index.html
autoapi/finance_calcs/factor/: index.html
autoapi/finance_calcs/momentum/: index.html
autoapi/finance_calcs/overlap/: index.html
autoapi/finance_calcs/portfolio/: index.html
autoapi/finance_calcs/post_trade/: index.html
autoapi/finance_calcs/quantile/: index.html
autoapi/finance_calcs/returns/: index.html
autoapi/finance_calcs/risk/: index.html
autoapi/finance_calcs/stats/: index.html
autoapi/finance_calcs/tail/: index.html
autoapi/finance_calcs/volatility/: index.html
autoapi/finance_calcs/volume/: index.html
autoapi/test_all/: index.html
autoapi/test_alpha/: index.html
autoapi/test_factor/: index.html
autoapi/test_indicators/: index.html
autoapi/test_portfolio/: index.html
autoapi/test_post_trade/: index.html
autoapi/test_returns_risk/: index.html
autoapi/test_stats/: index.html
autoapi/test_tail/: index.html
docs/src/: API.html  API.md  EXAMPLES.html  EXAMPLES.md
finance_calcs/: __init__.py  _namespace.py  _periods.py  alpha.py  factor.py  microstructure.py  momentum.py  native_kernels.py  overlap.py  portfolio.py  post_trade.py  preprocessing.py  quantile.py  regime.py  returns.py  risk.py  stats.py  tail.py  volatility.py  volume.py
finance_calcs/tests/: test_all.py  test_alpha.py  test_factor.py  test_indicators.py  test_microstructure_regime_preprocessing.py  test_native_kernels.py  test_portfolio.py  test_post_trade.py  test_returns_risk.py  test_stats.py  test_tail.py
numpy-2.4.6.dist-info/licenses/numpy/fft/pocketfft/: LICENSE.html
numpy-2.4.6.dist-info/licenses/numpy/random/: LICENSE.html
numpy-2.4.6.dist-info/licenses/numpy/random/src/distributions/: LICENSE.html
numpy/ma/: README.html
numpy/random/: LICENSE.html
pyarrow/tests/data/orc/: README.html
rust/: Cargo.toml
rust/python/: lib.rs
rust/python/example/: mod.rs
rust/src/: lib.rs
(+13 files in other folders)
