[package]
name = "finance_calcs_py"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
name = "finance_calcs"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
finance_calcs = { path = "./rust", version = "0.1.1" }
pyo3 = { version = "0.28.2", features = ["abi3", "abi3-py310", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true
