[package]
name = "finance_calcs_py"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
name = "finance_calcs"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
finance-calcs = { path = "./rust", version = "*" }
pyo3 = { version = "0.28.2", features = ["abi3", "abi3-py310", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true
