[package]
name = "finance_calcs_py"
version = "0.2.1"
edition = "2021"
publish = false

[lib]
name = "finance_calcs"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
finance-calcs = { path = "./rust", version = "*" }
pyo3 = { version = "0.29.0", features = ["abi3", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true
