[package]
name = "finance_calcs"
version = "0.2.0"
authors = ["PrettyGoodCapital <prettygoodcapital@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/prettygoodcapital/finance-calcs"
description = "Standard financial calculations"

[lib]
name = "finance_calcs"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]

[profile.test.junit]
path = "junit.xml"

